Ende(?) Normalverteilung, Fehler verbessert, Fehler hinzugefügt

--- a/MAIN/main.tex
+++ b/MAIN/main.tex
@@ -1,4 +1,4 @@
-\documentclass[11p,a4paper,fleqn]{report}
+\documentclass[11p,a4paper,fleqn,twoside,openright]{report}
 \nonstopmode
 
 \usepackage[scale=.9]{helvet} % or tgheros        %Schriftart
