--- a/kap4/kap4.tex
+++ b/kap4/kap4.tex
@@ -14,48 +14,48 @@
     \end{itemize}
   \end{minipage}
   \begin{minipage}{0.5\textwidth}
-  \begin{center}
-    \definecolor{qqwuqq}{rgb}{0,0.39,0}
-    \definecolor{ttzzqq}{rgb}{0.2,0.6,0}
-    \definecolor{ffqqqq}{rgb}{1,0,0}
-    \definecolor{ttttff}{rgb}{0.2,0.2,1}
-    \definecolor{uququq}{rgb}{0.25,0.25,0.25}
-    \begin{tikzpicture}[line join=round,x=2.0833333333333335cm,y=2.0833333333333335cm,scale=0.7]
-      \draw[->,color=black] (-1.2,0) -- (1.2,0) node[below]{$x$};
-      \foreach \x in {-1,1}
-      \draw[shift={(\x,0)},color=black] (0pt,2pt) -- (0pt,-2pt) node[below] {\footnotesize $\x$};
-      \draw[->,color=black] (0,-1.2) -- (0,1.2) node[left]{$y$};
-      \foreach \y in {-1,1}
-      \draw[shift={(0,\y)},color=black] (2pt,0pt) -- (-2pt,0pt) node[left] {\footnotesize $\y$};
-      \draw[color=black] (0pt,-10pt) node[right] {\footnotesize $0$};
-      \clip(-1.2,-1.2) rectangle (1.2,1.2);
-      \draw [shift={(0,0)},color=qqwuqq,fill=qqwuqq,fill opacity=0.1] (0,0) -- (0:0.21) arc (0:57.13:0.21) -- cycle;
-      \draw [line width=0.4pt] (0,0) circle (2.08cm);
-      \draw (0,0)-- (0.54,0.84);
-      \draw [line width=1.6pt,color=ttttff] (0,0.84)-- (0.54,0.84);
-      \draw [line width=1.6pt,color=ffqqqq] (0.54,0.84)-- (0.54,0);
-      \draw [line width=1.6pt,color=ttzzqq] (1,-1.2) -- (1,1.2);
-      \begin{scriptsize}
-        \fill [color=uququq] (0,0) circle (1.5pt);
-        \draw[color=uququq] (-0.11,-0.11) node {$O$};
-        \fill [color=black] (0.54,0.84) circle (1.5pt);
-        \draw[color=black] (0.61,0.92) node {$M$};
-        \fill [color=uququq] (0,0.84) circle (1.5pt);
-        \draw[color=uququq] (0.03,0.94) node {$A$};
-        \fill [color=uququq] (0.54,0) circle (1.5pt);
-        \draw[color=uququq] (0.7,0.04) node {$B$};
-        \draw[color=ttttff] (0.3,0.74) node {cos};
-        \draw[color=ffqqqq] (0.74,0.4) node {sin};
-        \draw[color=ttzzqq] (0.82,1.1) node {tan};
-        \draw[color=qqwuqq] (0.12,0.07) node {$\alpha$};
-      \end{scriptsize}
-    \end{tikzpicture}
-  \end{center}
+    \begin{center}
+      \definecolor{qqwuqq}{rgb}{0,0.39,0}
+      \definecolor{ttzzqq}{rgb}{0.2,0.6,0}
+      \definecolor{ffqqqq}{rgb}{1,0,0}
+      \definecolor{ttttff}{rgb}{0.2,0.2,1}
+      \definecolor{uququq}{rgb}{0.25,0.25,0.25}
+      \begin{tikzpicture}[line join=round,x=2.0833333333333335cm,y=2.0833333333333335cm,scale=0.7]
+        \draw[->,color=black] (-1.2,0) -- (1.2,0) node[below]{$x$};
+        \foreach \x in {-1,1}
+        \draw[shift={(\x,0)},color=black] (0pt,2pt) -- (0pt,-2pt) node[below] {\footnotesize $\x$};
+        \draw[->,color=black] (0,-1.2) -- (0,1.2) node[left]{$y$};
+        \foreach \y in {-1,1}
+        \draw[shift={(0,\y)},color=black] (2pt,0pt) -- (-2pt,0pt) node[left] {\footnotesize $\y$};
+        \draw[color=black] (0pt,-10pt) node[right] {\footnotesize $0$};
+        \clip(-1.2,-1.2) rectangle (1.2,1.2);
+        \draw [shift={(0,0)},color=qqwuqq,fill=qqwuqq,fill opacity=0.1] (0,0) -- (0:0.21) arc (0:57.13:0.21) -- cycle;
+        \draw [line width=0.4pt] (0,0) circle (2.08cm);
+        \draw (0,0)-- (0.54,0.84);
+        \draw [line width=1.6pt,color=ttttff] (0,0.84)-- (0.54,0.84);
+        \draw [line width=1.6pt,color=ffqqqq] (0.54,0.84)-- (0.54,0);
+        \draw [line width=1.6pt,color=ttzzqq] (1,-1.2) -- (1,1.2);
+        \begin{scriptsize}
+          \fill [color=uququq] (0,0) circle (1.5pt);
+          \draw[color=uququq] (-0.11,-0.11) node {$O$};
+          \fill [color=black] (0.54,0.84) circle (1.5pt);
+          \draw[color=black] (0.61,0.92) node {$M$};
+          \fill [color=uququq] (0,0.84) circle (1.5pt);
+          \draw[color=uququq] (0.03,0.94) node {$A$};
+          \fill [color=uququq] (0.54,0) circle (1.5pt);
+          \draw[color=uququq] (0.7,0.04) node {$B$};
+          \draw[color=ttttff] (0.3,0.74) node {cos};
+          \draw[color=ffqqqq] (0.74,0.4) node {sin};
+          \draw[color=ttzzqq] (0.82,1.1) node {tan};
+          \draw[color=qqwuqq] (0.12,0.07) node {$\alpha$};
+        \end{scriptsize}
+      \end{tikzpicture}
+    \end{center}
   \end{minipage}
 \end{Definition}\\
 Es ergeben sich folgende (wissenswerte) Werte:
 \\
-\begin{center}
+\begin{small}\begin{center}
   \begin{tikzpicture}[scale=5.3,cap=round,>=latex,scale=0.8]
     % draw the coordinates
     \draw[->] (-1.5cm,0cm) -- (1.5cm,0cm) node[right,fill=white] {$x$};
@@ -107,7 +107,7 @@ Es ergeben sich folgende (wissenswerte) Werte:
           (0cm,-1.25cm) node[fill=white] {(\color{blue}0\color{black},\color{red}-1\color{black})}
           (0cm,1.25cm)  node[fill=white] {(\color{blue}0\color{black},\color{red}1\color{black})};
   \end{tikzpicture}
-\end{center}
+\end{center}\end{small}
 \\
 Des Weiteren gilt:\\
 \begin{center}
