--- a/kap8/kap8.tex
+++ b/kap8/kap8.tex
@@ -1,34 +1,32 @@
 \documentclass[../MAIN/main.tex]{subfiles}
 \begin{document}
-\chapter{Algebra oder Zahlentheorie}
+\chapter{Zahlentheorie}
 \chapterauthor{Bruno}
 
 	\section{Körper}
+\begin{Definition}
+	Ein Körper ist eine Menge $K$, versehen mit zwei inneren zweistelligen Verknüpfungen $+$ und $\cdot$, also Addition und Multiplikation, für welche eine Addition
+	$$\oplus\quad : \quad K \times K \rightarrow K \qquad;\qquad(a;b) \longmapsto a+b $$\\
+	und eine Multiplikation
+	$$\odot \quad : \quad K \times K \rightarrow K \qquad;\qquad(a;b) \longmapsto a \cdot b $$\\
+	gegeben sind, sodass folgende Gesetze bewisen sind:\\
 
-Ein Körper ist eine Menge $K$, versehen mit zwei inneren zweistelligen Verknüpfungen $+$ und $\cdot$, also Addition und Multiplikation, für welche eine Addition
-$$\oplus\quad : \quad K \times K \rightarrow K$$
-$(a;b) \longmapsto a+b $\\\\
-und eine Multiplikation
-$$\odot \quad : \quad K \times K \rightarrow K$$
-$(a;b) \longmapsto a \cdot b $\\\\\\
-gegeben sind, sodass\\
-
-\begin{array}{rcl}
-\textcolor{titlepagecolor}{Assoziativgesetz} & $ (A1) & a+(b+c) = (a+b)+c $\\\\
-\textcolor{titlepagecolor}{Kommutativgesetz} & $ (A2) & a+b = b+a$\\\\
-\textcolor{titlepagecolor}{Neutrale\,\, Element} & $ (A3) & \exists ! \quad 0 \quad $ mit:  \\\\
-&$ & a+0 = 0+a = a$\\\\
-\textcolor{titlepagecolor}{Inverse\,\, Element} & $ (A4) & \forall a\in K \quad \exists ! -a \in K$  mit:  \\\\
-$ & &a+(-a) = 0$\\\\\\
-\textcolor{titlepagecolor}{Assoziativgesetz} & $ (M1) & a\cdot (b \cdot c) = (a\cdot b) \cdot c $\\\\
-\textcolor{titlepagecolor}{Kommutativgesetz} & $ (M2) & a\cdot b = b\cdot a    $\\\\
-\textcolor{titlepagecolor}{Neutrale\,\, Element} & $ (M3) & \exists ! \quad 1 \in K $ mit \\\\
-&$ & 1\cdot a = a \cdot 1 = a $ \\\\
-\textcolor{titlepagecolor}{Inverse\,\, Element} &$ (M4) & \exists ! \quad \dfrac{1}{a}$ \quad zu jedem $a \in K \backslash \{0\} $ mit: \\\\
-$ && a \cdot \dfrac{1}{a} = 1 $\\\\\\
-\textcolor{titlepagecolor}{Distributivgesetz} & $(D)$ & $a\cdot (b+c) = ab + ac$ \\
-\end{array}\\\\\\
-
+	\begin{array}{rcl}
+	\textcolor{titlepagecolor}{Assoziativgesetz} & $ (A1) & a+(b+c) = (a+b)+c $\\\\
+	\textcolor{titlepagecolor}{Kommutativgesetz} & $ (A2) & a+b = b+a$\\\\
+	\textcolor{titlepagecolor}{Neutrales\,\, Element} & $ (A3) & \exists ! \quad 0 \quad $ mit:  \\\\
+	&$ & a+0 = 0+a = a$\\\\
+	\textcolor{titlepagecolor}{Inverses\,\, Element} & $ (A4) & \forall a\in K \quad \exists ! -a \in K$  mit:  \\\\
+	$ & &a+(-a) = 0$\\\\\\
+	\textcolor{titlepagecolor}{Assoziativgesetz} & $ (M1) & a\cdot (b \cdot c) = (a\cdot b) \cdot c $\\\\
+	\textcolor{titlepagecolor}{Kommutativgesetz} & $ (M2) & a\cdot b = b\cdot a    $\\\\
+	\textcolor{titlepagecolor}{Neutrales\,\, Element} & $ (M3) & \exists ! \quad 1 \in K $ mit \\\\
+	&$ & 1\cdot a = a \cdot 1 = a $ \\\\
+	\textcolor{titlepagecolor}{Inverses\,\, Element} &$ (M4) & \exists ! \quad \dfrac{1}{a}$ \quad zu jedem $a \in K \backslash \{0\} $ mit: \\\\
+	$ && a \cdot \dfrac{1}{a} = 1 $\\\\\\
+	\textcolor{titlepagecolor}{Distributivgesetz} & $(D)$ & $a\cdot (b+c) = ab + ac$ \\
+	\end{array}
+\end{Definition}
 Dies erfüllen $\Q$, $\R$, $\R^{n}$ (Vektorräume), $\C$, Matritzen, prime Restklassengruppen $\Z / p\Z$ ...
 
 
@@ -38,31 +36,30 @@ Dies erfüllen $\Q$, $\R$, $\R^{n}$ (Vektorräume), $\C$, Matritzen, prime Restk
 
 \begin{Definition}
 Die ganze Zahl $a\in\Z$ teilt $b\in\Z$, wenn es ein $x$ gibt, mit $b=a\cdot x$. Man schreibt:
-$$a|b$$
-
+$$a \mid b$$
 $a$ ist ein \textbf{Teiler} von $b$ und $b$ ist \textbf{Vielfaches} von $a$\\\\
 
-Zwei Zahlen $a,b\in\Z$  sind \textbf{teilerfremd}, wenn aus $ c | a  $ und $c|b$ folgt $|c|=1$
+Zwei Zahlen $a,b\in\Z$  sind \textbf{teilerfremd}, wenn aus $ c \mid  a  $ und $c\mid b$ folgt $|c| =1$
 \end{Definition}
 
 \begin{Theorem}
 Aus dieser Teilbarkeitsrelation ergeben sich mehrere Eigenschaften:\\
 Sei $a,b,c,t\in\Z$ und $t\neq0$:\\\\
-(0)\qquad$a|b$ \quad und \quad&a|c& \quad dann \quad $a|b\pm c $\\
-(1)\qquad$a|b$ \quad und \quad$b|c$ \quad dann \quad $a|c$\\
-(2)\qquad$a|b$ \quad dann \quad $a|bc$\\
-(3)\qquad$at|bt\quad\Leftrightarrow\quad a|b$\\
-(4)\qquad$a|b$\quad dann \quad $b=0$ \quad oder\quad $|a| \leq |b| $\\
-(5)\qquad$a|b$\quad und\quad $b|a$ \quad dann\quad $a=\pm b$
+(0)\qquad$a\mid b$ \quad und \quad&a\mid c& \quad dann \quad $a \mid b\pm c $\\
+(1)\qquad$a\mid b$ \quad und \quad$b \mid c$ \quad dann \quad $a \mid c$\\
+(2)\qquad$a\mid b$ \quad dann \quad $a \mid bc$\\
+(3)\qquad$at\mid bt\quad\Leftrightarrow\quad a \mid b$\\
+(4)\qquad$a\mid b$\quad dann \quad $b=0$ \quad oder\quad $|a|  \leq |b|  $\\
+(5)\qquad$a\mid b$\quad und\quad $b\mid a$ \quad dann\quad $a=\pm b$
 \end{Theorem}
 
 \begin{Beweis}
 \begin{itemize}
-\item (1) \quad Wenn $a|b$ und $b|c$, dann gibt es $x,y\in\Z$ mit $b=a\cdot x$ und $c=b\cdot y$. Also gilt auch $c=b\cdot y=a\cdot(xy)$ und somit $a|c$\\
-\item (2) \quad Weil offensichtlich $b|bc$ gilt, folgt die Aussage sofort aus Aussage (3) \\
-\item (3)  \quad $at|bt\quad \Leftrightarrow\quad \exists x \in \Z : \, \, bt=atx \quad\Leftrightarrow \quad b=ax \quad\Leftrightarrow \quad a|b$ \\
-\item (4) \quad Sei $b=ax$ mit $x\in\Z$. Wenn $x=0$, dann ist $b=0$. In alles anderen Fällen ist $|x|>1$ und daher $|b| = |a| \cdot |x| \geq |a|$
-\item (5) \quad Wenn weder $a=0$ noch $b=0$ ist, dann folgt aus (4) $|a|\geq|b|\geq|a|$ und daher $a=\pm b$. Wenn also  $a=0$, dann folgt $b=0$
+\item (1) \quad Wenn $a \mid b$ und $b \mid c$, dann gibt es $x,y\in\Z$ mit $b=a\cdot x$ und $c=b\cdot y$. Also gilt auch $c=b\cdot y=a\cdot(xy)$ und somit $a\mid c$\\
+\item (2) \quad Weil offensichtlich $b\mid bc$ gilt, folgt die Aussage sofort aus Aussage (3) \\
+\item (3)  \quad $at\mid bt\quad \Leftrightarrow\quad \exists x \in \Z : \, \, bt=atx \quad\Leftrightarrow \quad b=ax \quad\Leftrightarrow \quad a\mid b$ \\
+\item (4) \quad Sei $b=ax$ mit $x\in\Z$. Wenn $x=0$, dann ist $b=0$. In alles anderen Fällen ist $|x| >1$ und daher $|b|  = |a|  \cdot |x|  \geq |a| $
+\item (5) \quad Wenn weder $a=0$ noch $b=0$ ist, dann folgt aus (4) $|a| \geq|b| \geq|a| $ und daher $a=\pm b$. Wenn also  $a=0$, dann folgt $b=0$
 \end{itemize}
 \end{Beweis}
 
@@ -101,13 +98,13 @@ Dann ist $$N=p_{1}\cdot p_{2}\cdot ... \cdot p_{r-1} \cdot p_{r} +1 = \left(\pro
 Dann hat man:\\
 
 $\Rightarrow$ $\left\{ \begin{array}{rccl}
-$p_{l} & | & p_{1}\cdot p_{2}\cdot...\cdot p_{r-1}\cdot p_{r}$\\
-$p_{l} & | & p_{1}\cdot p_{2}\cdot...\cdot p_{r-1}\cdot p_{r} +1$\\
+$p_{l} & \mid  & p_{1}\cdot p_{2}\cdot...\cdot p_{r-1}\cdot p_{r}$\\
+$p_{l} & \mid  & p_{1}\cdot p_{2}\cdot...\cdot p_{r-1}\cdot p_{r} +1$\\
 \end{array}\right.\\
 
 
-$\Leftrightarrow p_{l} | \, p_{1}\cdot p_{2} \cdot...\cdot p_{r-1} \cdot p_{r} - \left(  p_{1}\cdot p_{2} \cdot...\cdot p_{r-1} \cdot p_{r} +1 \right)$\\\\
-$\Leftrightarrow p_{l} | \, (-1) \quad $oder$ \quad p_{l} | 1$ \qquad   WIDERSPRUCH, da $p_{l}=1$ aber $1\notin \mathbb{P}$ \\\\
+$\Leftrightarrow p_{l} \mid  \, p_{1}\cdot p_{2} \cdot...\cdot p_{r-1} \cdot p_{r} - \left(  p_{1}\cdot p_{2} \cdot...\cdot p_{r-1} \cdot p_{r} +1 \right)$\\\\
+$\Leftrightarrow p_{l} \mid  \, (-1) \quad $oder$ \quad p_{l} \mid  1$ \qquad   WIDERSPRUCH, da $p_{l}=1$ aber $1\notin \mathbb{P}$ \\\\
 $N$ muss also einen Primteiler haben ungleich $p_{r} \quad mit \quad r\in\{1,2,3,...,r-1,r\}$ oder \textbf{selber prim sein}.
 \end{Beweis}
 
@@ -136,16 +133,16 @@ $$a \equiv b\mod n$$
 \begin{Beispiel}
 \begin{itemize}
 \item $29\equiv-121 \mod 5 $ \quad da $29 \equiv 5\cdot 5 +4$ \quad und \quad $-121 = 5\cdot (-25) +4$
-\item $88\equiv 24 \mod 8 $ \quad da $8|88$ \quad und \quad $8|24$
+\item $88\equiv 24 \mod 8 $ \quad da $8\mid 88$ \quad und \quad $8\mid 24$
 \item $87\equiv 23 \mod 8$ \\
 \end{itemize}
 \end{Beispiel}
 
 \begin{Theorem}
 Seien $a,b$ zwei ganze Zahlen und $n\in\N$ mit $n\geq 2$, dann gilt\\\\
-(1)\qquad $ a\equiv b \mod n \quad \Leftrightarrow \quad n|(a-b)$\\
-(2)\qquad $ a\equiv 0 \mod n \quad\Leftrightarrow\quad n|a$\\
-(3)\qquad falls $n'\geq 2$ und $n'|n$ dann gilt: \quad $a \equiv b \mod n \quad \Rightarrow \quad a \equiv b \mod n' $\\\\
+(1)\qquad $ a\equiv b \mod n \quad \Leftrightarrow \quad n\mid (a-b)$\\
+(2)\qquad $ a\equiv 0 \mod n \quad\Leftrightarrow\quad n\mid a$\\
+(3)\qquad falls $n'\geq 2$ und $n'\mid n$ dann gilt: \quad $a \equiv b \mod n \quad \Rightarrow \quad a \equiv b \mod n' $\\\\
 \end{Theorem}
 
 \begin{Beweis}
@@ -156,8 +153,8 @@ Seien $a,b$ zwei ganze Zahlen und $n\in\N$ mit $n\geq 2$, dann gilt\\\\
 
 \begin{Beispiel}
 \begin{itemize}
-\item (1) \quad $61 \equiv 29 \mod 8$ \quad (Rest 5) $\quad\Leftrightarrow\quad 8| (61-29) = 32 $
-\item (3) \quad $4 \geq 2$ \, und \, $4|12$ \quad $43 \equiv 67 \mod 12 \quad(r=7)\qquad \Rightarrow \quad 43 \equiv 67 \mod 4  $ \\
+\item (1) \quad $61 \equiv 29 \mod 8$ \quad (Rest 5) $\quad\Leftrightarrow\quad 8\mid  (61-29) = 32 $
+\item (3) \quad $4 \geq 2$ \, und \, $4\mid 12$ \quad $43 \equiv 67 \mod 12 \quad(r=7)\qquad \Rightarrow \quad 43 \equiv 67 \mod 4  $ \\
 \end{itemize}
 \end{Beispiel}
 
@@ -190,7 +187,7 @@ $\Rightarrow a+b \equiv a^{*} + b^{*} \mod n$ \qquad und \qquad  $a\cdot b \equi
 \end{Beispiel}
 
 \begin{Theorem}
-Seien $a,b \in \N$ mit \quad $a,b \geq 2$ \quad und $a|b$, dann gilt
+Seien $a,b \in \N$ mit \quad $a,b \geq 2$ \quad und $a\mid b$, dann gilt
 $$[r] \mod b \quad \subseteq \quad [r] \mod a $$
 ($\subseteq$ heißt "Teilmenge")
 \end{Theorem}
