--- a/MAIN/main.tex
+++ b/MAIN/main.tex
@@ -13,6 +13,7 @@
 \usepackage{tikz,pgf,pgfplots}                    %Grafiken zeichnen
 \usepackage{epstopdf}
 \usepackage[ngerman]{babel}
+\usepackage[utf8]{inputenc}                       %UTF-8 für unsere armen Mac-User
 \usepackage{mdframed}	                            %Box			%\begin{mdframed} 		und			%\end{mdframed}
 \usepackage{fancyhdr}	                            %Header
 \usepackage[margin=2cm]{geometry}	                %Seitenrand
