--- a/kap14/kap14.tex
+++ b/kap14/kap14.tex
@@ -6,7 +6,7 @@
 
 \section{La physique des particules}
 
-Le modele standard de la physique dans sa beauté incontestée.\\\\
+Le modèle standard de la physique dans sa beauté incontestée.\\\\
 
 \usetikzlibrary{calc,positioning,shadows.blur,decorations.pathreplacing}
 
@@ -111,8 +111,8 @@ Le modele standard de la physique dans sa beauté incontestée.\\\\
     \draw [mbrace] (2.5,-3.6) -- (5.5,-3.6)
                    node[bottomlabel] {5 bosons\\(+1 charge opposée $W$)};
 
-    \draw [brace] (-0.5,.8) -- (0.5,.8) node[toplabel]         {matiere ordinaire};
-    \draw [brace] (0.5,.8)  -- (2.5,.8) node[toplabel]         {matiere instable};
+    \draw [brace] (-0.5,.8) -- (0.5,.8) node[toplabel]         {matière ordinaire};
+    \draw [brace] (0.5,.8)  -- (2.5,.8) node[toplabel]         {matière instable};
     \draw [brace] (2.5,.8)  -- (4.5,.8) node[toplabel]          {transmetteurs de force};
     \draw [brace] (4.5,.8)  -- (5.5,.8) node[toplabel]       {bosons\\Goldstone};
     \draw [brace] (5.5,.8)  -- (7,.8)   node[toplabel] {en dehors\\du modèle standard};
