--- a/kap9/kap9.tex
+++ b/kap9/kap9.tex
@@ -3,6 +3,51 @@
 \chapter{Matrizen}
 \chapterauthor{Bruno}
 
+	\section{Überblick und Grundrechenarten}
+
+
+\subsection{Arten von Matritzen}
+
+\begin{Definition}
+Matritzen sind ........ und bilden einen abgeschlossenen Körper. Sie wird durch ihre Koeffizienten und ihr Dimension definiert: Eine Matrix der Dimension $m \times n$ besitzt $m$ Zeilen und $n$ Spalten.\\
+
+$$A= \left( \begin{array}{rccccl}
+a_{1,1}&a_{1,2}&...&a_{1,j}&...&a_{1,n}\\
+a_{2,1}&a_{2,2}&...&a_{2,j}&...&a_{2,n}\\
+&&\vdots&&&\\
+a_{i,1}&a_{i,2}&...&a_{i,j}&...&a_{,n}\\
+&&\vdots&&&\\
+a_{m,1}&a_{m,2}&...&a_{m,j}&...&a_{m,n}\\
+\end{array}\right)$$\\
+Sie wird quadratische Matrix genannt wenn $m=n$.
+\end{Definition}
+
+\begin{GTR-Tipp}
+Im Matrix Menü: $[\text{matrix}] + [\text{MATH}]$ kann man mit dem Befehl...\\
+\begin{enumerate}
+\item ... rref$[B]$ die \textbf{Dreiecksform} einer Matrix $B$ ausrechnen lassen:\\\\
+$$B= \left( \begin{array}{rccl}
+b_{1,1}&b_{1,2}&b_{1,3}&b_{1,4}\\
+0&b_{2,2}&b_{2,3}&b_{2,4}\\
+0&0&b_{3,3}&b_{3,4}\\
+0&0&0&b_{4,3}\\
+\end{array}\right)$$\\
+\item ... rref$[C]$ die \textbf{Diagonalform} einer Matrix $C$ ausrechnen lassen:\\\\
+$$C= \left( \begin{array}{rccl}
+c_{1,1}&0&0&0\\
+0&c_{2,2}&0&0\\
+0&0&c_{3,3}&0\\
+0&0&0&c_{4,4}\\
+\end{array}\right)$$\\
+\end{enumerate}
+\end{GTR-Tipp}
+
+
+\subsection{Addition und Multiplikation}
+ADDITION MATRIX
+MULTIPLIKATION MATRIXXXXX
+
+
 	\section{Lineare Gleichungssysteme und Gaußalgorithmus}
 
 Lineare Gleichungssysteme lassen sich aufwendig mit Einsetzungsverfahren oder Additionsverfahren l"osen, Carl Friedrich Gauß (1777-1855) hat ein Algorithmus erfunden, mit dem sie sich ohne Taschenrechner leicht und relativ schnell l"osen lassen.\\
