--- a/kap14/kap14.tex
+++ b/kap14/kap14.tex
@@ -167,7 +167,7 @@ $\varepsilon_{0}$: permittivité du vide (réponse d'un milieu donné a un champ
 La relation entre force électrique et champ électrique s'exprime avec $q$ (Coulombs), charge de source:
 $$\vv{F_{e}}=q\cdot \vv{E}$$
 $$\Rightarrow F_{e}=|q|\cdot E$$\\\\
-Le champ électrique s'exprime donc de cette maniere:\\\\
+Le champ électrique s'exprime donc de cette manière:\\\\
 \begin{tikzpicture}
     \draw (0,0) node {};
     \draw (7.85,0) node {$\vv{E}= \dfrac{1}{4\pi\varepsilon_{0}}\cdot\dfrac{q}{r^2}\cdot\vv{U}_{A/B}$};
