--- a/kap9/kap9.tex
+++ b/kap9/kap9.tex
@@ -11,16 +11,34 @@
 \begin{Definition}
 Eine Matrix ist eine rechteckige Anordnung von Elementen. Sie tauchen in fast allen Gebieten der Mathematik und der Mechanik auf und erleichtern Rechen- und Gedankenvorgänge. Eine Matrix ist eindeutig durch ihre \textbf{Komponenten} und ihr \textbf{Typ} definiert: Eine Matrix mit $m$ Zeilen und $n$ Spalten wird $m \times n$-Matrix genannt. Stammen ihre Komponenten aus einem Körper $K$, spricht man von einer \textit{Matrix über K}.\\
 
-$$A= \begin{pmatrix}
-a_{1,1}&a_{1,2}&...&a_{1,j}&...&a_{1,n}\\
+\tikzset{
+        round/.style = { rounded corners=2mm },
+        node style ge/.style={circle},
+}
+\begin{tikzpicture}
+\tikzset{BarreStyle/.style =   {opacity=.3,line width=5 mm,line cap=round,color=#1}}
+
+    \draw (0,0) node {};
+    \draw[round] (6.4,1.7) rectangle (5.65,-1.72) [color=titlepagecolor];
+    \draw[round] (10.75,1.7) rectangle (5.65,1.2) [color=titlepagecolor];
+     \draw [BarreStyle=titlepagecolor]  (5.9,1.45) -- (10.5,-1.65) ;
+
+    \draw (7.85,0) node {$A= \begin{pmatrix}
+a_{1,1}&a_{1,2}&...&a_{1,j}&...&a_{1,n}\\\\
 a_{2,1}&a_{2,2}&...&a_{2,j}&...&a_{2,n}\\
 &&\vdots&&&\\
-a_{i,1}&a_{i,2}&...&a_{i,j}&...&a_{,n}\\
+a_{i,1}&a_{i,2}&...&a_{i,j}&...&a_{3,n}\\
 &&\vdots&&&\\
 a_{m,1}&a_{m,2}&...&a_{m,j}&...&a_{m,n}\\
-\end{pmatrix}$$\\
-Sie wird quadratische Matrix genannt wenn $m=n$.
+\end{pmatrix}$};
+    \draw[<-] (5.1,1.5) -- (4,1.5) node[color=titlepagecolor,left] {Zeile};
+    \draw[<-] (6,1.9) -- (6,2.5) node[color=titlepagecolor ] {Spalte};
+    \draw[<-] (5.4,1.7) -- (5.1,1.9) -- (4,1.9) node[color=titlepagecolor,left] {Hauptdiagonale};
+\end{tikzpicture}\\\\
 \end{Definition}
+
+
+
 
 \begin{Bemerkung}
 Eine Matrix, die aus nur einer Spalte oder nur einer Zeile besteht, wird auch Vektor genannt.\\\\
@@ -38,7 +56,7 @@ b_{1,1}&b_{1,2}&b_{1,3}&b_{1,4}\\
 0&0&b_{3,3}&b_{3,4}\\
 0&0&0&b_{4,3}\\
 \end{pmatrix}$$\\
-\item ... rref$[C]$ die \textbf{Diagonalform} einer Matrix $C$ ausrechnen lassen. Die einzigen Nicht-NullEinträge sind auf der Hauptdiagonalen.:\\\\
+\item ... rref$[C]$ die \textbf{Diagonalform} einer Matrix $C$ ausrechnen lassen. Die einzigen Nicht-Null Einträge sind auf der Hauptdiagonalen:\\\\
 $$C= \begin{pmatrix}
 c_{1,1}&0&0&0\\
 0&c_{2,2}&0&0\\
