--- a/kap9/kap9.tex
+++ b/kap9/kap9.tex
@@ -32,7 +32,8 @@ a_{i,1}&a_{i,2}&...&a_{i,j}&...&a_{3,n}\\
 a_{m,1}&a_{m,2}&...&a_{m,j}&...&a_{m,n}\\
 \end{pmatrix}$};
     \draw[<-] (5.1,1.5) -- (4,1.5) node[color=titlepagecolor,left] {Zeile};
-    \draw[<-] (6,1.9) -- (6,2.5) node[color=titlepagecolor ] {Spalte};
+    \draw[<-] (6,1.9) -- (6,2.5);
+	\draw (6,2.7) node[color=titlepagecolor] {Spalte};
     \draw[<-] (5.4,1.7) -- (5.1,1.9) -- (4,1.9) node[color=titlepagecolor,left] {Hauptdiagonale};
 \end{tikzpicture}\\\\
 \end{Definition}
@@ -77,7 +78,7 @@ Das Neutrale Element der Addition ist logischerweise eine leere Matrix, das inve
 
 \subsubsection{Skalarmultiplikation}
 
-Die Skalarmultiplikation, die man aus Vektoren kennt, kann auf Matrizen erweitert werden: 
+Die Skalarmultiplikation, die man aus Vektoren kennt, kann auf Matrizen erweitert werden:
 $$k \cdot A = k \cdot \begin{pmatrix} a_{1,1} & a_{1,2} & a_{1,3} \\ a_{2,1} & a_{2,2} & a_{2,3} \end{pmatrix} = \begin{pmatrix} k \cdot a_{1,1} & k \cdot a_{1,2} & k \cdot a_{1,3} \\ k \cdot a_{2,1} & k \cdot a_{2,2} & k \cdot a_{2,3} \end{pmatrix} $$
 
 \subsubsection{Matrizenmultiplikation}
